# web2vault

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/web2vault/: __init__.py  chunker.py  cli.py  config.py  crawler.py  exceptions.py  formatter.py  models.py  utils.py  vault_index.py  writer.py
src/web2vault/generators/: __init__.py  base.py  deep_dive.py  practice.py  qa.py  summary.py
src/web2vault/llm/: __init__.py  anthropic.py  base.py  openai.py
